[tool.poetry]
name = "aks_cluster_provisioner"
version = "0.1.0"
description = ""
authors = ["Gigi <gigi.sayfan@cloudkitchens.com>"]

[tool.poetry.dependencies]
python = "3.9.6"
sh = "*"
pathology = "^0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"




